<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@drawable/ic_bg"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/quizz_app"
        android:textStyle="bold"
        android:textSize="25sp"
        android:textColor="@color/white"
        />

   <com.google.android.material.card.MaterialCardView
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginStart="20dp"
       android:layout_marginEnd="20dp"
       android:background="@color/white"
       app:cardCornerRadius="30dp"
      >
      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_margin="16dp"
          android:orientation="vertical"
          >
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
             android:text="@string/welcome"
             android:textStyle="bold"
             android:textSize="30sp"
             android:textColor="#363A43"
             />

         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
             android:text="@string/please_enter_your_name"
             android:textStyle="bold"
             android:textSize="16sp"
             android:textColor="#7A8089"
             android:layout_marginTop="16dp"
             android:layout_marginBottom="16dp"
             />

         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_marginTop="20dp"
             >
             <androidx.appcompat.widget.AppCompatEditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/nameTextBox"
                 android:hint="@string/e_g_naveen"
                 android:inputType="textCapWords"
                 android:textColor="#363A43"
                 android:textColorHint="#7A8089"
                 />
         </com.google.android.material.textfield.TextInputLayout>

         <Button
             android:id="@+id/start"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:text="@string/start"
             android:textColor="@color/white"
             android:background="@color/design_default_color_primary"
             />
      </LinearLayout>
   </com.google.android.material.card.MaterialCardView>
</LinearLayout>